--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p class="description">Eu ja to cansado de tando pensar
       <code class="code">I'm sad</code>. 1 mes escrevendo e tentando fazer isso (ta <code
         class="code">quase,</code> pelo menos assim espero
-      escrever e paia.)
+      escrever é paia.)
     </p>
 
     <section class="grid">
