--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>ThatSn.</title>
+  <title>ThatSana.</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -16,7 +16,7 @@
     <p class="description">Eu ja to cansado de tando pensar
       <code class="code">I'm sad</code>. 1 mes escrevendo e tentando fazer isso (ta <code
         class="code">quase,</code> pelo menos assim espero
-      escrever é paia.)
+      escrever e paia.)
     </p>
 
     <section class="grid">
@@ -31,17 +31,15 @@
           ele tava assim antes, agora ta melhor.
         </p>
       </a>
+      <a href="clips.html" class='card'>
+        <h2>Clips &rarr;</h2>
+        <p>Clipes desse ano, talvez o do ano que vem.</p>
+      </a>
     </section>
   </main>
 
   <script type="module" src="script.js"></script>
 
-  <!--
-    This script places a badge on your repl's full-browser view back to your repl's cover
-    page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-    teal, blue, blurple, magenta, pink!
-  -->
- 
 </body>
 
 </html>
