--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h1 class="title">Welcome to Jugle (eu to ficando maluko)</h1>
     <p class="description">Eu ja to cansado de tando pensar
       <code class="code">I'm sad</code>. 1 mes escrevendo e tentando fazer isso (ta <code
-        class="code">quase,</code> pelo menos assim espero
-      escrever e paia.)
+        class="code">quase,</code> pelo menos assim espero,
+      escrever é paia.)
     </p>
 
     <section class="grid">
