--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>acho que é meu instagram. ou não</p>
       </a>
 
-      <a href="https://github.com/Sana201p/Sitzin.js" class='card'>
+      <a href="https://github.com/Sana201p/SiteOld" class='card'>
         <h2>Inferno/Github &rarr;</h2>
         <p>
           ele tava assim antes, agora ta melhor.
