Final Up? index.html

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 
 <body>
   <main>
-    <h1 class="title">Welcome to Jugle (eu to ficando maluko)</h1>
-    <p class="description">Eu ja to cansado de tando pensar
-      <code class="code">I'm sad</code>. 1 mes escrevendo e tentando fazer isso (ta <code
-        class="code">quase,</code> pelo menos assim espero,
-      escrever é paia.)
+    <h1 class="title">I have u? you have me!</h1>
+    <p class="description">Pensar nisso makes me cry.
+      <code class="code">I'm sad</code> foi um um curto tempo (mas <code
+        class="code">ainda</code> penso como se ainda acontecesse.)
     </p>
 
     <section class="grid">
@@ -31,15 +30,31 @@
           ele tava assim antes, agora ta melhor.
         </p>
       </a>
-      <a href="clips.html" class='card'>
-        <h2>Clips &rarr;</h2>
+      <a href="https://www.youtube.com/@sana201x" class='card'>
+        <h2>Clips/Chanel &rarr;</h2>
         <p>Clipes desse ano, talvez o do ano que vem.</p>
       </a>
+      
+      <a href="https://discord.com/api/oauth2/authorize?client_id=1104813540478570558&permissions=8&scope=bot" class='card'>
+        <h2>Dayka bot &rarr;</h2>
+        <p>Bot do discord ou tentativa de um.</p>
+      </a>
+  
+      <a href="https://drive.usercontent.google.com/download?id=11DNNdiYRHIVx-md_QeVCqGhwa3bhMXiJ&export=download&authuser=0&confirm=t&uuid=f90482f0-5133-4bf5-904a-e477102132e8&at=APZUnTX2KBTYzr58uDFW8uBndcwj:1708438478787" class='card'>
+        <h2>Download &rarr;</h2>
+        <p>Vírus potente, Cuidado viu.
+          (ta avisado)
+        </p>
+    </a>
+  
     </section>
   </main>
+
+  
 
   <script type="module" src="script.js"></script>
 
 </body>
 
 </html>
+
