New linked Up index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>Bot do discord ou tentativa de um.</p>
       </a>
   
-      <a href="https://drive.usercontent.google.com/download?id=11DNNdiYRHIVx-md_QeVCqGhwa3bhMXiJ&export=download&authuser=0&confirm=t&uuid=f90482f0-5133-4bf5-904a-e477102132e8&at=APZUnTX2KBTYzr58uDFW8uBndcwj:1708438478787" class='card'>
+      <a href="https://drive.google.com/uc?export=download&id=11DNNdiYRHIVx-md_QeVCqGhwa3bhMXiJ" class='card'>
         <h2>Download &rarr;</h2>
         <p>Vírus potente, Cuidado viu.
           (ta avisado)
