--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 
@@ -7,19 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>ThatSana.</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <main>
-    <h1 class="title">I have u? you have me!</h1>
+    <h1 id="title" class ="title">I have u? you have me!</h1>
     <p class="description">Pensar nisso makes me cry.
       <code class="code">I'm sad</code> foi um um curto tempo (mas <code
         class="code">ainda</code> penso como se ainda acontecesse.)
     </p>
 
     <section class="grid">
-      <a href="https://www.instagram.com/kotakejj/" class='card'>
+      <a href="https://www.instagram.com/shinigami.cci/" class='card'>
         <h2>Instagram. &rarr;</h2>
         <p>acho que é meu instagram. ou não</p>
       </a>
@@ -40,21 +38,26 @@
         <p>Bot do discord ou tentativa de um.</p>
       </a>
   
-      <a href="https://drive.google.com/uc?export=download&id=11DNNdiYRHIVx-md_QeVCqGhwa3bhMXiJ" class='card'>
+      <a href="https://drive.google.com/uc?export=download&id=17vctjTdJh0KNt-jb8hfKdrDnM82w7UPu" class='card'>
         <h2>Download &rarr;</h2>
         <p>Vírus potente, Cuidado viu.
           (ta avisado)
         </p>
     </a>
+
+    <a href="xedni.html" class='card'>
+      <h2>Vision Mode &#127761; &rarr;</h2>
+      <p>Branco e preto
+        trocar de tema
+      </p>
+  </a>
   
     </section>
   </main>
 
-  
-
   <script type="module" src="script.js"></script>
+
 
 </body>
 
 </html>
-
