--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </p>
 
     <section class="grid">
-      <a href="https://www.instagram.com/shinigami.cci/" class='card'>
+      <a href="https://www.instagram.com/kotakejj/" class='card'>
         <h2>Instagram. &rarr;</h2>
         <p>acho que é meu instagram. ou não</p>
       </a>
