up kotake intagram xedni.html

--- a/xedni.html
+++ b/xedni.html
@@ -18,7 +18,7 @@
     </p>
 
     <section class="grid">
-      <a href="https://www.instagram.com/shinigami.cci/" class='card'>
+      <a href="https://www.instagram.com/kotakejj/" class='card'>
         <h2>Instagram. &rarr;</h2>
         <p>acho que é meu instagram. ou não</p>
       </a>
