--- a/clips.html
+++ b/clips.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Clipes</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>ThatSana.</title>
+  <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <main>
-    <h1 class="title">Clipes</h1>
-    <p class="description">basicamente uns clipes ai.</p>
+    <h1 id="title" class ="title">buga buga</h1>
+    <p class="description">huga huga kk.)
+    </p>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Mtls1-Eadhc?si=I_wz_a7FFGnZTe3j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<p>melhores momento de uma jogatinha com meu duo, que também erá o editor do video.</p>
+    <section class="grid">
+      <a href="https://youtu.be/d6iB5bU38xU?si=L1yu71Hi802hbutQ" class='card'>
+        <h2>fallen fallen. &rarr;</h2>
+        <p>simplesmente eu rindo de disespero puro.</p>
+      </a>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ulla-B4-N5E?si=ovg55SvLNv2sh20q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<p>é sim...</p>
-  </main>
 
-  <script type="module" src="script.js"></script>
 </body>
 
 </html>
