--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
           (ta avisado)
         </p>
     </a>
+      
+       <a href="clips.html" class='card'>
+        <h2>NOT Open &rarr;</h2>
+        <p>em projeto não abra.
+          (ta avisado)
+        </p>
+    </a>
 
     <a href="xedni.html" class='card'>
       <h2>Vision Mode &#127761; &rarr;</h2>
