--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>ThatSana.</title>
-  <link href="selyts.css" rel="stylesheet" type="text/css" />
+  <link href="styles2.css" rel="stylesheet" type="text/css" />
 </head>
 
 
