--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </p>
     </a>
 
-    <a href="xedni.html" class='card'>
+    <a href="index2.html" class='card'>
       <h2>Vision Mode &#127761; &rarr;</h2>
       <p>Branco e preto
         trocar de tema
