--- a/index2.html
+++ b/index2.html
@@ -46,6 +46,13 @@
         </p>
     </a>
 
+      <a href="clips.html" class='card'>
+        <h2>NOT Open &rarr;</h2>
+        <p>em projeto não abra.
+          (ta avisado)
+        </p>
+    </a>
+
     <a href="index.html" class='card'>
       <h2>Vision Mode &#127754; &rarr;</h2>
       <p>Branco e preto
