--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
         <p>em projeto não abra.
           (ta avisado)
         </p>
+       </a>
+      
+      <a href="twitch.tv/sana201p" class='card'>
+        <h2>Twitch :) &rarr;</h2>
+        <p>segue la pmds.
+          (provavelmente não vou ta on.)
+        </p>
     </a>
+
+                    
 
     <a href="index2.html" class='card'>
       <h2>Vision Mode &#127761; &rarr;</h2>
