--- a/index2.html
+++ b/index2.html
@@ -52,6 +52,13 @@
           (ta avisado)
         </p>
     </a>
+      
+            <a href="twitch.tv/sana201p" class='card'>
+        <h2>Twitch :) &rarr;</h2>
+        <p>segue la pmds.
+          (provavelmente não vou ta on.)
+        </p>
+     </a>
 
     <a href="index.html" class='card'>
       <h2>Vision Mode &#127754; &rarr;</h2>
