--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </p>
        </a>
       
-      <a href="twitch.tv/sana201p" class='card'>
+      <a href="https://www.twitch.tv/sana201p" class='card'>
         <h2>Twitch :) &rarr;</h2>
         <p>segue la pmds.
           (provavelmente não vou ta on.)
