--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@
         </p>
     </a>
       
-            <a href="twitch.tv/sana201p" class='card'>
+            <a href="https://www.twitch.tv/sana201p" class='card'>
         <h2>Twitch :) &rarr;</h2>
         <p>segue la pmds.
           (provavelmente não vou ta on.)
