--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ font-family: "Antic";
 <div class="is-layout-flow wp-block-column"><p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 62px;text-align: center;color: #99000b">sana<br><em>in </em><strong>simply writing this</strong><br><strong><i class="fal fa-power-off"></i></strong></p></div>
 <div class="is-layout-flow wp-block-column is-vertically-aligned-center">
 <hr class="conblock-hide-tablet conblock-hide-desktop  wp-block-separator has-css-opacity is-style-default" />
-<p>odeio tecnologia seriamente.<br><br> Passei mais de 2 anos projetando, estudando e pensado em como fazer esse blog sozinho. O principal objetivo do site era marcar um ano, com os melhores momentos do ano de 2022, mas o tempo se passou e eu fui desanimando da ideia.<br><br> Eu adoro programar a noite passar um bom tempo batendo a cabeça e me perguntando o por que a minha string não fuciona como eu gostaria, mas logico que nada que uma musica boa não resolva.<br><br>Tenho um conhecimento até que consideravel, para uma pessoa da minha idade é claro, mas como qualquer criança gosto de mexer em tudo que posso pra aprender, tanto que foi assim que eu fiz esse blog, estudando funçando em sites aleios me esperirando em varias coisas, mas ultimamente sem tempo.<br><br>Depois de 2 anos me desidir terminar o que tinha começado, apenas para provar para mim mesmo, que se eu quisses eu conseguiria facilmente.</p>
+<p>odeio tecnologia seriamente.<br><br> Passei mais de 2 anos projetando, estudando e pensado em como fazer esse blog sozinho. O principal objetivo do site era marcar um ano, com os melhores momentos do ano de 2022. Mas o tempo se passou e eu fui desanimando da ideia.<br><br> Eu adoro programar a noite e passar um bom tempo batendo a cabeça e me perguntando o por que a minha string não fuciona como eu gostaria. Mas logico que nada que uma musica boa não resolva.<br><br>Tenho um conhecimento até que consideravel, para uma pessoa da minha idade é claro, mas como qualquer criança gosto de mexer em tudo que posso pra aprender, tanto que foi assim que eu fiz esse blog, estudando e funçando em sites aleios me esperirando em varias coisas, mas ultimamente sem tempo.<br><br>Depois de 2 anos me desidir terminar o que tinha começado, apenas para provar para mim mesmo, que se eu quisses eu conseguiria facilmente.</p>
 <hr class="conblock-hide-tablet conblock-hide-desktop  wp-block-separator has-css-opacity is-style-default" />
 </div>
 <div class="is-layout-flow wp-block-column is-vertically-aligned-center">
@@ -241,7 +241,7 @@ font-family: "Antic";
     <div class="is-layout-flow wp-block-column">
         <hr class="wp-block-separator has-css-opacity is-style-wide" />
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-tower-broadcast"></i>luta?</p>
-        <p>simplesmente comecei a lutar com meu amigo a um bom tempo atras, 2 anos atras eu acho, foi nesse tempo que eu criei a paixão de lutar, depois de um tempo treinando com ele, tive a oportunidade de ir pra uma academia de jiu-jitsu.</p>
+        <p>simplesmente comecei a lutar com meu amigo a um bom tempo atras, 3 anos atras eu acho, foi nesse tempo que eu criei a paixão de lutar, depois de um tempo treinando com ele, tive a oportunidade de ir pra uma academia de jiu-jitsu.</p>
         <div class="wp-block-media-text alignwide is-stacked-on-mobile is-vertically-aligned-center" style="grid-template-columns:44% auto" id="jj">
     <figure class="wp-block-media-text__media">
         <img decoding="async" loading="lazy" width="1024" height="1024" src="imagens/luta.jpg" alt class="wp-image-21 size-full" srcset="imagens/luta.jpg 1024w, imagens/luta,jpg 300w, imagens/luta.jpg 150w, imagens/luta.jpg 768w, imagens/luta.jpg 1200w" sizes="(max-width: 1024px) 100vw, 1024px" />
@@ -258,7 +258,7 @@ font-family: "Antic";
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-car-bolt"></i> praia</p>
         <p>quando eu era mais novo fui na pra com meus pais, foi a melhor ida na praia da minha vida, lembro brevemente de alguns momentos (eu me afogando), apredendo a nadar, comendo um açai com meu pai, a casa na praia, minha mãe feliz e jovem meu pai bruto e legal ao mesmo tempo, tenho muitas saudades desses momentos, que foram importante pra minha formação de carater de hoje.</p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-sailboat"></i> mar</p>
-        <p>eu gosto de agua, é azul :)</p>
+        <p>eu gosto de agua, é azul. :)</p>
     </div>
     <div class="is-layout-flow wp-block-column">
         <hr class="wp-block-separator has-css-opacity is-style-wide" />
@@ -293,7 +293,7 @@ font-family: "Antic";
 </div>
 
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-raygun"></i> amigos</p>
-        <p>Samuka, Heitor, Vinicius, Isabela, Danilo, Lucas e Nicolas. </p>
+        <p>Lucas G., Danilo, Isabela, Samuka, Vini, David, Gabriel C., Vitor F., Nicolas, Renan M. e Ryan.</p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-vr-cardboard"></i>tempo gasto</p>
         <img decoding="async" loading="lazy" width="1024" height="1024" src="imagens/horas.jpg" alt class="wp-image-21 size-full" srcset="imagens/horas.jpg 1024w, imagens/horas.jpg 300w, imagens/horas.jpg 150w, imagens/horas.jpg 768w, imagens/horas.jpg 1200w" sizes="(max-width: 1024px) 100vw, 1024px" />
         <p>foram apenas 7 hrs, mas eu gostei.</p>
