--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ font-family: "Antic";
 </div>
 
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-raygun"></i> amigos</p>
-        <p>Lucas G., Rafael S., Danilo, Isabela, Samuka, Vini, David, Gabriel C., Vitor F., Nicolas, Renan M. e Ryan.</p>
+        <p>Lucas G., Rafael S., Danilo, Isabela, Samuka, Vini, David, Gabriel C., Victor F., Nicolas, Renan M. e Ryan.</p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-vr-cardboard"></i>tempo gasto</p>
         <img decoding="async" loading="lazy" width="1024" height="1024" src="imagens/horas.jpg" alt class="wp-image-21 size-full" srcset="imagens/horas.jpg 1024w, imagens/horas.jpg 300w, imagens/horas.jpg 150w, imagens/horas.jpg 768w, imagens/horas.jpg 1200w" sizes="(max-width: 1024px) 100vw, 1024px" />
         <p>foram apenas 7 hrs, mas eu gostei.</p>
