--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="robots" content="max-image-preview:large" />
+<link rel="icon" href="imagens/smily2poits.ico" type="image/x-icon">
 <title>HELP ME SANA</title>
 
 <script type="b6e9c7b2e575cc32505b20bb-text/javascript">
 
-/*! This file is auto-generated */
+
 </script>
 <style>
 img.wp-smiley,
@@ -293,19 +294,22 @@ font-family: "Antic";
 </div>
 
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-raygun"></i> amigos</p>
-        <p>Lucas G., Rafael S., Danilo, Isabela, Samuka, Vini, David, Gabriel C., Victor F., Nicolas, Renan M. e Ryan.</p>
+        <p>Lucas G., Danilo, Isabela, Samuka, Vini, David, Gabriel C., Victor F., Nicolas, Renan M. e Ryan.</p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-vr-cardboard"></i>tempo gasto</p>
         <img decoding="async" loading="lazy" width="1024" height="1024" src="imagens/horas.jpg" alt class="wp-image-21 size-full" srcset="imagens/horas.jpg 1024w, imagens/horas.jpg 300w, imagens/horas.jpg 150w, imagens/horas.jpg 768w, imagens/horas.jpg 1200w" sizes="(max-width: 1024px) 100vw, 1024px" />
         <p>foram apenas 7 hrs, mas eu gostei.</p>
     </div>
+    
 </div>
+
 <hr class="wp-block-separator has-css-opacity is-style-wide" />
 <div style="height:450px" aria-hidden="true" class="wp-block-spacer"></div>
 <p class="has-text-align-center">Este espaço foi deixado intencionalmente em branco.</p>
 <div style="height:450px" aria-hidden="true" id="void" class="wp-block-spacer"></div>
-<p class="has-text-align-center"><a href="#imsana" data-type="internal" data-id="#imsana">from&nbsp; de volta ao meio e ao redor novamente ↺</a></p>
+<p class="has-text-align-center"><a href="#imsana" data-type="internal" data-id="#imsana">from&nbsp;de volta ao meio e ao redor novamente ↺</a></p>
 <div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
 <p></p>
+
 </div>
 </div>
 
