text update 2 (tem bem mais) index.html

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ font-family: "Antic";
 <p>Atualmente, comecei a praticar alguns esportes alguns deles jiu-jitsu, judo, volêi, é fazer alguma coisa as vezes é bom pra destrair a mente, quando eu tava começando a lutar, um amigo meu me explicou bastante coisa sobre o tipo de luta dele, e foi assim que eu comecei a gostar de jiu-jitsu.<br><br>O tempo passa e eu quase sempre to ouvindo musica, até sem peceber eu to ouvindo alguma coisinha inclusive agora, estou ouvindo:Fred again.. | Boiler Room: London.<br><br>Este site é "hospedado" em algum bloco de notas do meu computador, ou no github eu não faço ideia, mas se você estar vendo isso, é quase certeza que está no github, gostaria de voltar no passado.<br><br>No passado as coisas eram mais simples. bem mais.</p>
 </div>
 </div>
-<p class="has-text-align-center"><em>Além de coisas de tecnologia, coleciono hobbies e me interesso por <a href="#bjj">jiu-jitsu e games. ↓</a></em></p>
+<p class="has-text-align-center"><em>tentando não me apaixonar por tecn novamente <a href="#bjj">. ↓</a></em></p>
 
 </div>
 <hr class="wp-block-separator has-css-opacity is-style-default" />
@@ -250,33 +250,60 @@ font-family: "Antic";
 
         <p>depois de um tempo treinando jj eu parei por conta da escola, pois não tinha tempo pra focar nos 2, claro que eu ainda amo lutar, e toda opotunidade que eu tenho, marco de ir treinar com o Vinicius.
 </p>
-        <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-passport"></i> paixões</p>
-        <p>é um belo topico, o qual eu tenho bastante experiencia sobre, mas prefiro não contar, vai que para de dar certo</p>
+        <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-passport"></i> tempo</p>
+        <p>quando se ver não a mais tempo, é legal e ao mesmo tempo preocupante ao se lembrar que você não era como antigamente</p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-car-bolt"></i> praia</p>
-        <p>quando eu era mais novo fui na pra com meus pais, foi a melhor ida na praia da minha vida, lembro brevemente de alguns momentos (eu me afogando), apredendo a nadar, comendo um açai com meu pai, a casa na praia, minha mãe feliz e jovem meu pai bruto e legal ao mesmo tempo, tenho muitas saudades desses momentos, que foram importante pra minha formação de carater de hoje.</p>
-        <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-sailboat"></i> mar</p>
-        <p>eu gosto de agua, é azul. :)</p>
+        <p>quando eu era mais novo fui na prai com meus pais, foi a melhor visita na praia da minha vida, lembro brevemente de alguns momentos (eu me afogando), apredendo a nadar, comendo um açai com meu pai, a casa na praia, minha mãe feliz e jovem meu pai bruto e legal ao mesmo tempo, tenho muitas saudades desses momentos, que foram importante pra minha formação de carater de hoje.</p>
+        <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-sailboat"></i> noite</p>
+        <p>minha mãe vive dizendo "a noite ficou pra dormir não pra ficar jogando" ja passei um bom tempo das minhas noites jogando, e eu simplesmente não consigo me arrepender</p>
     </div>
     <div class="is-layout-flow wp-block-column">
         <hr class="wp-block-separator has-css-opacity is-style-wide" />
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-circle-location-arrow"></i> Historia random</p>
         <p>quando que começou esse negocio de amizade?, não me lembro ao certo mas começou la 7º serie da escola, durante a pandemia do virus covid-19, durante uma video aula, que minha mãe/professora estava realizando escutei a voz de um garoto, que me lembrava a voz do "toddyn" meu criador de enigmas favorito na epoca, a gente trocou mó papo, e no final da aula ele me passou o email dele, o que raios eu ia fazer com o email dele eu tinha 13 anos.</p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-farm"></i> terraria</p>
-        <p>Terraria é um jogo de ação-aventura em 2D desenvolvido pela Re-Logic. Lançado em 2011, ele oferece um vasto mundo para explorar, minerar e construir. O jogador começa com ferramentas básicas e deve coletar recursos para criar equipamentos melhores. Há uma variedade de inimigos e chefes para enfrentar, além de biomas únicos, como o Submundo e a Floresta. O jogo incentiva a criatividade, permitindo construir desde simples casas até complexas estruturas. Com atualizações frequentes, Terraria continua a cativar jogadores com novos conteúdos e desafios emocionantes.</p>
+        <p>terraria.</p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-plate-utensils"></i> comida</p>
-        <p>comecei a comer com meus pais quando eles eram juntos. eles perderam o interesse. (era um bom topico pra falar minha comida preferida).</p>
+        <p>sempre gostei de cozinhar, hoje em dia nem mexo mais nas panelas, sinto falta das risadas aleatórias na cozinha.</p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-house-laptop"></i> casa/casa</p>
-        <p>não sei eu moro na rua (piada, eu tenho uma casa)</p>
+        <p>criado e crescido em São Paulo, até hoje moro nessa cidade aonde o céu e cinza ao invés de azul, mas isso é um pequeno detalhe, tem muito lugar agradável e bonito nessa cidade.</p>
     </div>
     <div class="is-layout-flow wp-block-column">
         <hr class="wp-block-separator has-css-opacity is-style-wide" />
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-dial-max"></i> musica</p>
-        <p>eu amo essa musica | -0.30 melhor part. </p>
+        <p>acho que quase todo mundo deve ter uma dependência em musica, eu tambem tenho, essa foi algumas delas.</p>
+
+        <p>Keep you - duumu </p>
+          <figure class="wp-block-embed is-type-rich is-provider-spotify wp-block-embed-spotify wp-embed-aspect-21-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
+            <iframe loading="lazy" title="Spotify Embed: ?" style="border-radius: 12px" width="100%" height="380" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3iIX0bJuRYOND9OGK5rgGh?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div></figure>
+        <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-dial-max">
+            <p>Better - Nonsens</p>
         <figure class="wp-block-embed is-type-rich is-provider-spotify wp-block-embed-spotify wp-embed-aspect-21-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
             <iframe loading="lazy" title="Spotify Embed: ?" style="border-radius: 12px" width="100%" height="380" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3iIX0bJuRYOND9OGK5rgGh?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div></figure>
-        <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-dial-max"></i> colecionado memorias</p>
-        <p>meu pai coleciona muitos discos de venil</p>
+        <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-dial-max">
+
+            <p>Open Spaces - Nevve</p>
+            <figure class="wp-block-embed is-type-rich is-provider-spotify wp-block-embed-spotify wp-embed-aspect-21-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
+                <iframe loading="lazy" title="Spotify Embed: ?" style="border-radius: 12px" width="100%" height="380" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"<iframe style="border-radius:12px" src="https://open.spotify.com/track/2TXNzTUp1KMUMD7pYMWkCY?si=C67IYprPRiGzzNaOyvZ34w" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div></figure>
+            <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-dial-max">
+
+                <p>4555. - MeiaUm</p>
+  <figure class="wp-block-embed is-type-rich is-provider-spotify wp-block-embed-spotify wp-embed-aspect-21-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
+            <iframe loading="lazy" title="Spotify Embed: ?" style="border-radius: 12px" width="100%" height="380" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"<iframe style="border-radius:12px" src="https://open.spotify.com/track/5gzNSawvGV2zwfXTLPV96J?si=-h936bSSRL2LUrvLMm9S5A" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div></figure>
+        <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-dial-max">
+
+            <p>Losing You - Ephixa</p>
+<figure class="wp-block-embed is-type-rich is-provider-spotify wp-block-embed-spotify wp-embed-aspect-21-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
+            <iframe loading="lazy" title="Spotify Embed: ?" style="border-radius: 12px" width="100%" height="380" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"<iframe style="border-radius:12px" src="https://open.spotify.com/track/0j7yF7CURZTm6rnJWOWIoV?si=q_DLXX3cTWOrF_iImla-Wg" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div></figure>
+        <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-dial-max"> 
+
+        </i> colecionado memorias</p>
+        <p>isso aqui, ainda ta acontecendo e aparentemente não quer parar </p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-drone"></i> foto aleatoria</p>
         <p>a foto de um barco foda</p>
 
@@ -290,10 +317,10 @@ font-family: "Antic";
 </div>
 
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-raygun"></i> amigos</p>
-        <p>Lucas G., Rafael S., Danilo, Isabela, Samuka, Vini, David, Gabriel C., Victor F., Nicolas, Renan M. e Ryan.</p>
+        <p>depois eu coloco uma foto de geral aqui, nem que seja photoxopada </p>
         <p class="fonts-plugin-block " style="font-family: Courier Prime;font-weight: normal;font-size: 26px"><i class="fal fa-vr-cardboard"></i>tempo gasto</p>
         <img decoding="async" loading="lazy" width="1024" height="1024" src="imagens/horas.jpg" alt class="wp-image-21 size-full" srcset="imagens/horas.jpg 1024w, imagens/horas.jpg 300w, imagens/horas.jpg 150w, imagens/horas.jpg 768w, imagens/horas.jpg 1200w" sizes="(max-width: 1024px) 100vw, 1024px" />
-        <p>foram apenas 7 hrs, mas eu gostei.</p>
+        <p>foi bem mais que apenas 7 horas, eu não aguentava mais.</p>
     </div>
 </div>
 <hr class="wp-block-separator has-css-opacity is-style-wide" />
